--- a/mac/Info.plist
+++ b/mac/Info.plist
@@ -33,5 +33,7 @@
             <key>ClassPath</key>
             <string>$JAVAROOT/ui.jar:$JAVAROOT/jgoodies-common.jar:$JAVAROOT/jgoodies-looks.jar:$JAVAROOT/jar_0.jar</string>
         </dict>
+	<key>NSHighResolutionCapable</key>
+	<string>True</string>
     </dict>
 </plist>
