--- a/mac/Info.plist
+++ b/mac/Info.plist
@@ -31,7 +31,7 @@
             <key>Arguments</key>
             <array/>
             <key>ClassPath</key>
-            <string>$JAVAROOT/ui.jar:$JAVAROOT/jgoodies-common.jar:$JAVAROOT/jgoodies-looks.jar:$JAVAROOT/jar_0.jar</string>
+            <string>$JAVAROOT/ui.jar:$JAVAROOT/jgoodies-common-1.8.0.jar:$JAVAROOT/jgoodies-looks-2.6.0.jar:$JAVAROOT/jar_0.jar</string>
         </dict>
 	<key>NSHighResolutionCapable</key>
 	<string>True</string>
