--- a/Hours.app/Contents/Info.plist
+++ b/Hours.app/Contents/Info.plist
@@ -24,14 +24,12 @@
         <string>1.0</string>
         <key>Java</key>
         <dict>
-            <key>JVMVersion</key>
-            <string>1.6*</string>
             <key>MainClass</key>
             <string>hours.Hours</string>
             <key>Arguments</key>
             <array/>
             <key>ClassPath</key>
-            <string>$JAVAROOT/ui.jar:$JAVAROOT/jgoodies-common-1.8.0.jar:$JAVAROOT/jgoodies-looks-2.6.0.jar:$JAVAROOT/jar_0.jar</string>
+            <string>$JAVAROOT/rt.jar:$JAVAROOT/jgoodies-common-1.8.0.jar:$JAVAROOT/jgoodies-looks-2.6.0.jar:$JAVAROOT/jar_0.jar</string>
         </dict>
 	<key>NSHighResolutionCapable</key>
 	<string>True</string>
