--- a/Hours.app/Contents/Info.plist
+++ b/Hours.app/Contents/Info.plist
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>CFBundleGetInfoString</key>
-        <string>Hours 1.0</string>
-        <key>CFBundleExecutable</key>
-        <string>JavaApplicationStub</string>
-        <key>CFBundleIdentifier</key>
-        <string>hours</string>
-        <key>CFBundleName</key>
-        <string>Hours</string>
-        <key>CFBundleIconFile</key>
-        <string>Hours.icns</string>
+<dict>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>English</string>
+	<key>CFBundleExecutable</key>
+	<string>JavaAppLauncher</string>
+	<key>CFBundleIconFile</key>
+	<string>Hours.icns</string>
+	<key>CFBundleIdentifier</key>
+	<string>hours</string>
+	<key>CFBundleDisplayName</key>
+	<string>Hours</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>Hours</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
-        <key>CFBundleInfoDictionaryVersion</key>
-        <string>6.0</string>
-        <key>CFBundlePackageType</key>
-        <string>APPL</string>
-        <key>CFBundleSignature</key>
-        <string>????</string>
-        <key>CFBundleVersion</key>
-        <string>1.0</string>
-        <key>Java</key>
-        <dict>
-            <key>MainClass</key>
-            <string>hours.Hours</string>
-            <key>Arguments</key>
-            <array/>
-            <key>ClassPath</key>
-            <string>$JAVAROOT/rt.jar:$JAVAROOT/jgoodies-common-1.8.0.jar:$JAVAROOT/jgoodies-looks-2.6.0.jar:$JAVAROOT/jar_0.jar</string>
-        </dict>
+	<key>CFBundleSignature</key>
+	<string>????</string>
+	<key>CFBundleVersion</key>
+	<string>1.0</string>
+	<key>CFBundleGetInfoString</key>
+	<string>Hours 1.0</string>
+	<key>JVMMainClassName</key>
+	<string>hours.Hours</string>
+	<key>Java</key>
+	<dict>
+		<key>MainClass</key>
+		<string>hours.Hours</string>
+		<key>Arguments</key>
+		<array/>
+		<key>ClassPath</key>
+		<string>$JAVAROOT/rt.jar:$JAVAROOT/jgoodies-common-1.8.0.jar:$JAVAROOT/jgoodies-looks-2.6.0.jar:$JAVAROOT/jar_0.jar</string>
+	</dict>
 	<key>NSHighResolutionCapable</key>
 	<string>True</string>
-    </dict>
+</dict>
 </plist>
