added icon to new oracle appbundler build
Former-commit-id: 6fb6ff721f79c7eea7f7fd435069b09fc1604fd3

--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,8 @@
             name="Hours"
             displayname="Hours"
             identifier="hours.Hours"
+            icon="Hours.app/Contents/Resources/Hours.icns"
+            shortversion="1.1"
             mainclassname="hours.Hours">
             <classpath file="Hours.app/Contents/Java/jar_0.jar" />
         </bundleapp>
