--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project name="Hours" default="default" basedir=".">        
     <taskdef name="bundleapp"
              classname="com.oracle.appbundler.AppBundlerTask"   
-             classpath="lib/appbundler-1.0.jar" />
+             classpath="lib/appbundler-1.0ea.jar" />
 
     <target name="bundle-hours">
         <bundleapp outputdirectory="dist"
