--- a/build.xml
+++ b/build.xml
@@ -8,11 +8,12 @@
         <bundleapp outputdirectory="dist"
             name="Hours"
             displayname="Hours"
-            identifier="hours.Hours"
+            identifier="hours"
             icon="Hours.app/Contents/Resources/Hours.icns"
             shortversion="1.1"
             mainclassname="hours.Hours">
             <classpath file="Hours.app/Contents/Java/jar_0.jar" />
+            <option value="-Duser.dir=$APP_ROOT/.." />
         </bundleapp>
     </target>
 
