moved jar_0 to bin/
Former-commit-id: f2e13536307bf957794bbc106acc1219b65ed6e7

--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,7 @@
             icon="Hours.app/Contents/Resources/Hours.icns"
             shortversion="1.1"
             mainclassname="hours.Hours">
-            <classpath file="Hours.app/Contents/Java/jar_0.jar" />
+            <classpath file="bin/jar_0.jar" />
             <option value="-Duser.dir=$APP_ROOT/.." />
         </bundleapp>
     </target>
