moved icon and old Hours.app bundle
Former-commit-id: 9c7e74f2958d819d714e1634899fd3884c6d935c

--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
             name="Hours"
             displayname="Hours"
             identifier="hours"
-            icon="Hours.app/Contents/Resources/Hours.icns"
+            icon="Hours.icns"
             shortversion="1.1"
             mainclassname="hours.Hours">
             <classpath file="bin/jar_0.jar" />
